--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="Header">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -23,6 +23,16 @@
                 <li><button class="btn-primary">Hire Me</button></li>
             </ul>
         </nav>
+        <div class="benner">
+            <div class="benner-content">
+                <h3 class="benner-gretting">Hi, I  am</h3>
+                <h1 class="benner-title">Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="btn-primary">Download cv</button>
+                <button class="btn-primary">Contact</button>
+            </div>
+            <img class="profile-pic" src="images/hardy.png" alt="">
+        </div>
 
     </header>
     <main>
