added font awesome

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="styles/portfolio.css">
+    <script src="https://kit.fontawesome.com/37385e55d5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -29,8 +30,8 @@
                 <h1 class="benner-title">Mary Hardy</h1>
                 <p class="benner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.
                     Morning because as to society behaved moments.</p>
-                <button class="btn-primary">Download cv</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i> Download cv</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i> Contact</button>
             </div>
             <img class="profile-pic" src="images/hardy.png" alt="">
         </div>
@@ -154,7 +155,7 @@
                 </div>
             </div>
             <div class="Download-cv">
-                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary"> <i class="fa-solid fa-download"></i> Download CV</button>
             </div>
         </section>
 
